--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
               Hello <span class="text-warning">.</span>
             </h1>
             <p
-              class="animate__animated animate__flash animate__delay-0.7s intro-text fs-4 mb-1"
+              class="animate__animated animate__flash animate__delay-0.5s intro-text fs-4 mb-1"
             >
               I'm Temmie
             </p>
             <p
-              class="animate__animated animate__backInRight animate__delay-7s role fs-5 mb-0"
+              class="animate__animated animate__backInRight animate__delay-0.7s role fs-5 mb-0"
             >
               FrontEnd Developer
             </p>
@@ -109,27 +109,27 @@
       <!-- Tools list -->
 
       <div class="tools-list">
-        <div class="html5">
+        <div class="tools">
           <i class="fa-brands fa-html5"></i>
           HTML 5
         </div>
-        <div class="css3">
+        <div class="tools">
           <i class="fa-brands fa-css3-alt"></i>
           CSS
         </div>
-        <div class="git">
+        <div class="tools">
           <i class="fa-brands fa-git-alt"></i>
           GIT
         </div>
-        <div class="git-hub">
+        <div class="tools">
           <i class="fa-brands fa-github"></i>
           GITHUB
         </div>
-        <div class="bootstrap">
+        <div class="tools">
           <i class="fa-brands fa-bootstrap"></i>
           BOOTSTRAP
         </div>
-        <div class="vs-code">
+        <div class="tools">
           <i class="fa-solid fa-code"></i>
           VS CODE
         </div>
@@ -220,7 +220,6 @@
                 <a href="#" target="_blank" class="project-link-2"
                   >View Project</a
                 >
-                <i class="fa-thin fa-arrow-up-right"></i>
               </div>
             </div>
           </div>
@@ -249,7 +248,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 order- order-md-2">
+          <div class="col-md-6 order-md-2">
             <div class="project-content">
               <h3>Social Links Profile</h3>
 
@@ -280,7 +279,6 @@
                   class="project-link-2"
                   >View Project</a
                 >
-                <i class="fa-thin fa-arrow-up-right"></i>
               </div>
             </div>
           </div>
@@ -315,7 +313,6 @@
                   class="project-link-2"
                   >View Project</a
                 >
-                <i class="fa-thin fa-arrow-up-right"></i>
               </div>
             </div>
           </div>
@@ -342,7 +339,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 order- order-md-2">
+          <div class="col-md-6 order-md-2">
             <div class="project-content">
               <h3>Recipe Page</h3>
 
@@ -409,7 +406,6 @@
                   class="project-link-2"
                   >View Project</a
                 >
-                <i class="fa-thin fa-arrow-up-right"></i>
               </div>
             </div>
           </div>
@@ -436,7 +432,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 order- order-md-2">
+          <div class="col-md-6 order-md-2">
             <div class="project-content">
               <h3>Blog Preview Card</h3>
 
@@ -465,13 +461,90 @@
                   class="project-link-2"
                   >View Project</a
                 >
-                <i class="fa-thin fa-arrow-up-right"></i>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <section id="contact" class="contact-section py-5">
+      <div class="container">
+        <div class="text-center mb-5">
+          <span class="section-tag">Contact</span>
+          <h2 class="mt-3">Let’s work together</h2>
+          <p class="contact-subtitle">
+            Got a project, an idea, or just want to say hi? I’m open to
+            opportunities, collaborations, and constructive feedback.
+          </p>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <form class="contact-form">
+              <div class="row gy-4">
+                <div class="col-md-6">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your Name"
+                    required
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Your Email"
+                    required
+                  />
+                </div>
+
+                <div class="col-12">
+                  <textarea
+                    rows="5"
+                    class="form-control"
+                    placeholder="Your Message"
+                    required
+                  ></textarea>
+                </div>
+
+                <div class="col-12 text-center buttons">
+                  <button type="submit" class="btn btn-warning btn-lg">
+                    Send Message
+                  </button>
+
+                  <a
+                    class="btn btn-lg button-2"
+                    href="https://boitemmie.github.io/Social-Links-Profile/"
+                    target="_blank"
+                    >Connect boiTemmie</a
+                  >
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <h3 class="text-center mt-4">Godwin Temmie</h3>
+      <p class="text-center">
+        Copyright<i class="fa-regular fa-copyright"></i>2026 Godwin Temmie. All
+        Rights Reserved
+      </p>
+      <div class="contact-socials text-center mt-4">
+        <a href="https://github.com/boitemmie" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://www.linkedin.com/feed/" target="_blank"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a href="mailto:godwintemmie@gmail.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
